# ai-model-evaluator

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: models.yaml
src/: __init__.py  app.py  benchmarks.py  evaluator.py  metrics.py  report_generator.py
tests/: __init__.py  test_benchmarks.py  test_evaluator.py  test_metrics.py
