[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-model-evaluator"
version = "1.0.0"
description = "LLM benchmarking toolkit for systematic comparison of multiple language models across accuracy, latency, cost, and safety metrics."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Onurcan Donmezer"},
]
keywords = ["llm", "benchmark", "evaluation", "ai", "ml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "google-genai>=1.0",
    "numpy>=1.24",
    "streamlit>=1.30",
    "pandas>=2.0",
    "plotly>=5.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/onurcandonmezer/ai-model-evaluator"
Repository = "https://github.com/onurcandonmezer/ai-model-evaluator"
Issues = "https://github.com/onurcandonmezer/ai-model-evaluator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
